@@ -191,7 +191,7 @@ Type=Application
 Icon=@MOZ_APP_NAME@
 Categories=GNOME;GTK;Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;application/xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;x-scheme-handler/chrome;video/webm;application/x-xpinstall;
-StartupWMClass=Navigator
+StartupWMClass=@MOZ_WM_CLASS@
 StartupNotify=true
 %%ifdef MOZ_FREEDESKTOP_ACTIONS
 Actions=NewWindow;
